--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <title>Openlayer Study</title>
 </head>
 <body>
-  <include src="./src/components/header/index.html"></include>
+  <include src="./components/header/index.html"></include>
   asdgaksgdj
+  <script src="./main.js"></script>
 </body>
 </html>
