添加路径别名

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
   <title>Openlayer Study</title>
 </head>
 <body>
-  <include src="./components/header/index.html"></include>
+  <include src="components/header/index.html"></include>
   <script type="module" src="./main.js"></script>
 </body>
 </html>
